--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo": "~48.0.9",
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.19.1",
+    "firebase-admin": "^11.7.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.6",
