--- a/app.json
+++ b/app.json
@@ -31,6 +31,14 @@
       "eas": {
         "projectId": "3cafc7d1-ea54-43b2-93c3-8ed60e5f685d"
       }
-    }
+    },
+    "plugins": [
+      [
+        "expo-image-picker",
+        {
+          "photosPermission": "The app accesses your photos to let you share them with your friends."
+        }
+      ]
+    ]
   }
 }
