--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "expo": "~48.0.9",
+    "expo-image-picker": "~14.1.1",
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.19.1",
     "firebase-admin": "^11.7.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-google-button": "^0.7.2",
     "react-native": "0.71.6",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
@@ -29,7 +31,7 @@
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-web": "~0.18.10",
-    "expo-image-picker": "~14.1.1"
+    "expo-updates": "~0.16.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
