--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-web": "~0.18.10",
+    "react-native-paper": "4.9.2",
+    "react-native-dropdown-select-list": "2.0.0",
     "expo-updates": "~0.16.4"
   },
   "devDependencies": {
