--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eventsquest",
+  "name": "eventquest",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -12,6 +12,7 @@
     "@expo/config-plugins": "~6.0.0",
     "@expo/webpack-config": "^18.0.1",
     "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-native-community/checkbox": "^0.5.15",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
@@ -19,21 +20,22 @@
     "expo": "~48.0.9",
     "expo-image-picker": "~14.1.1",
     "expo-status-bar": "~1.4.4",
+    "expo-updates": "~0.16.4",
     "firebase": "^9.19.1",
     "firebase-admin": "^11.7.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-google-button": "^0.7.2",
     "react-native": "0.71.6",
+    "react-native-btr": "^2.2.0",
+    "react-native-dropdown-select-list": "2.0.0",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
+    "react-native-paper": "4.9.2",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "react-native-web": "~0.18.10",
-    "react-native-paper": "4.9.2",
-    "react-native-dropdown-select-list": "2.0.0",
-    "expo-updates": "~0.16.4"
+    "react-native-web": "~0.18.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
